--- a/kinematica/exercises/basis_oef.tex
+++ b/kinematica/exercises/basis_oef.tex
@@ -19,7 +19,7 @@ Kan de snelheid van een voorwerp gelijk zijn aan nul, terwijl de versnelling ver
 Kan een voorwerp dat een positieve versnelling heeft een negatieve snelheid hebben? Kan het omgekeerde ook? Licht je antwoord toe.
 
 \begin{oplossing}
-    Ja, dat kan. Neem bijvoorbeeld een voorwerp dat je verticaal omhoog gooit. Als je de referentieas waarmee je de beweging wil beschrijven verticaal naar benden kiest, zal de versnelling van de beweging positief zijn en de snelheid negatief. De snelheid is negatief omdat je tegengesteld aan de as beweegt en de versnelling is positief omdat de snelheid minder negatief wordt.
+    Ja, dat kan. Neem bijvoorbeeld een voorwerp dat je verticaal omhoog gooit. Als je de referentieas waarmee je de beweging wil beschrijven verticaal naar beneden kiest, zal de versnelling van de beweging positief zijn en de snelheid negatief. De snelheid is negatief omdat je tegengesteld aan de as beweegt en de versnelling is positief omdat de snelheid minder negatief wordt.
 
     Het omgekeerde kan ook, draai gewoon de referentieas om.
 \end{oplossing}
@@ -40,7 +40,7 @@ Kan een voorwerp dat een positieve versnelling heeft een negatieve snelheid hebb
 \begin{exercise}
 
 Een veerman tracht een stromende rivier loodrecht over te roeien. 
-Hij slaagt erin ten opzicht van het water een snelheid van $2,00\rm\,m/s$ te ontwikkelen -- de stroomsnelheid is \SI{1,25}{m/s}. 
+Hij slaagt erin ten opzicht van het water een snelheid van \SI{2,00}{m/s} te ontwikkelen -- de stroomsnelheid is \SI{1,25}{m/s}. 
 De rivier is \SI{150}{\meter} breed. 
 
 \begin{question}
@@ -57,8 +57,7 @@ Er is gegeven dat
 We berekenen de hoek $\alpha$. 
 
 
-De component, tegengesteld aan de stroomrichting, van de snelheid waarmee de veerman roeit ten opzichte van het water, moet even groot zijn als de stroomsnelheid zodat hij in de richting van de rivier resulterend
-geen snelheid zal hebben. 
+De component, tegengesteld aan de zin waarin het water stroomt, van de snelheid waarmee de veerman roeit ten opzichte van het water, moet even groot zijn als de stroomsnelheid zodat de veerman in de richting van de rivier resulterend geen snelheid zal hebben.
 
 % \begin{figure}[h]
 % \centering
@@ -116,7 +115,7 @@ De coördinaten van een deeltje zijn als functie van de tijd wordt gegeven door
 	\[
 	\vec{r}=bt\vec{e}_x+(c-dt^2)\vec{e}_y
 	\]
-	met $b=2,00\rm\,m/s$, $c=5,00\rm\,m$ en $d=1,00\rm\,m/s^2$.
+	met $b=\SI{2,00}{\meter\per\second}$, $c=\SI{5,00}{\meter}$ en $d=\SI{1,00}{\meter\per\second\squared}$.
 	
 	\begin{question}
 	Druk $y$ uit in functie van $x$. Hoe ziet de baan eruit?
@@ -129,7 +128,7 @@ De coördinaten van een deeltje zijn als functie van de tijd wordt gegeven door
 	&\Downarrow\\
 	y&=c-dt^2=c-\frac{d}{b^2}x^2
 	\end{align*}
-	Dit is een bergparabool met top $(0,c)=(0,5,00\rm\,m)$.
+	Dit is een bergparabool met top $(0,c)=(0,\SI{5,00}{\meter})$.
 	\end{oplossing}
 	\end{question}
 	
@@ -188,11 +187,12 @@ De coördinaten van een deeltje zijn als functie van de tijd wordt gegeven door
 	\end{question}
 	
 	\begin{question}
-	Is er op \(t=\SI{1}{\second}\) een tangentiële versnelling, een normale versnelling, of beide? Licht kort toe welke componenten aanwezig zijn.
+	Is er op \(t=\SI{1}{\second}\) een tangentiële versnelling, een normale versnelling, of beide?% Licht kort toe welke componenten aanwezig zijn.
 	\end{question}
 	
 	\begin{question}
-	Bepaal de baanvergelijking (weg van \(t\)) van het projectiel: schrijf \(y\) uit in functie van \(x\).
+		Bepaal de baanvergelijking van de baan van het voorwerp.
+	%Bepaal de baanvergelijking (weg van \(t\)) van het projectiel: schrijf \(y\) uit in functie van \(x\).
 	\end{question}
 	
 	\end{exercise}
