baan is verticaal lijnstuk, niet een rechte

--- a/kinematica/basis_intro.tex
+++ b/kinematica/basis_intro.tex
@@ -94,7 +94,7 @@ Sommige van deze vragen worden behandeld in de kinematica, andere in de dynamica
 \begin{oplossing}
     \begin{enumerate}
         \item De baan van de bal ziet er gebogen uit, waarbij de bal eerst omhoog en dan terug omlaag gaat.
-        \item Ten opzichte van de werper in de auto gaat de bal enkel naar boven en naar beneden. Als we ervan uitgaan dat de wrijving te verwaarlozen is, is de baan van de bal een verticale rechte.
+        \item Ten opzichte van de werper in de auto gaat de bal enkel naar boven en naar beneden. Als we ervan uitgaan dat de wrijving te verwaarlozen is, is de baan van de bal een verticaal lijnstuk.
         \item Voor een waarnemer buiten de auto die stilstaat, is de snelheidsvector van de bal op het moment dat hij zich op zijn hoogste punt bevindt, horizontaal gericht. In verticale zin keert de bal van bewegingszin om zodat hij in deze richting geen snelheid heeft maar in horizontale zin beweegt de bal nog altijd met de auto mee.
         \item De snelheidsvector maakt nu een hoek met de horizontale en is groter dan de snelheid op het hoogste punt. Naast een horizontale component heeft de snelheid nu ook een verticaal naar beneden gerichte component omdat de bal ook terug naar beneden aan het vallen is.
     \end{enumerate}
