--- a/kinematica/exercises/1dim_oef_denkvragen.tex
+++ b/kinematica/exercises/1dim_oef_denkvragen.tex
@@ -12,7 +12,7 @@
 \end{exercise}
 
 \begin{exercise}
-	Kan de gemiddelde snelheid van een deeltje over een gegeven tijdsinterval gelijk zijn aan nul, terwijl de grootte van de snelheid over een kortere tijdsduur verschillend is van nul? Verklaar je antwoord.
+	Kan de gemiddelde snelheid van een deeltje over een gegeven tijdsinterval gelijk zijn aan nul, terwijl de grootte van de snelheid over een kortere tijdsduur binnen dat tijdsinterval verschillend is van nul? Verklaar je antwoord.
 \end{exercise}
 
 \begin{exercise}
@@ -20,19 +20,17 @@
 \end{exercise}
 
 \begin{exercise}
-	Wanneer een voorwerp zich met een constante snelheid verplaatst, verschilt de gemiddelde snelheid over een willekeurig tijdsinterval dan van de momentane snelheid op een willekeurig moment?
+	Wanneer een voorwerp zich met een constante snelheid verplaatst, verschilt de gemiddelde snelheid over een willekeurig tijdsinterval dan van de ogenblikkelijke snelheid op een willekeurig moment?
 \end{exercise}
 
 
 
 \begin{exercise}
     Een puntmassa voert een eenparig veranderlijke rechtlijnige beweging uit over het tijdsinterval [\SI{0}{s},\SI{2}{s}] met beginsnelheid en beginpositie van respectievelijk \SI{0}{m/s} en \SI{0}{m}. De versnelling is \SI{3}{m/s^2}. Waarom kan je onmiddellijk stellen dat als in het tijdsinterval de tijd half om is, de puntmassa nog niet halfweg is?
-    \begin{enumerate}
         %\item Breng, zoals de opgelegde werkwijze bij het oplossen van vraagstukken vereist, zowel het gegeven als het gevraagde (hier het te bewijzen) in symbolen.
-        \item Leg in woorden uit op welke manier je onmiddellijk kan inzien dat het te bewijzen juist is.
-        \item Controleer het te bewijzen via de numerieke waarden van dit vraagstuk.
-        \item Geef nu het bewijs.
-    \end{enumerate}
+    \begin{question} Leg in woorden uit op welke manier je onmiddellijk kan inzien dat het te bewijzen juist is. \end{question}
+    \begin{question} Controleer het te bewijzen via de numerieke waarden van dit vraagstuk.                      \end{question}
+    \begin{question} Geef nu het bewijs.                                                                         \end{question}
 \end{exercise}
 
 % Vraagstukken die focussen op wiskundige aspecten
@@ -61,9 +59,9 @@
 \end{exercise}
 
 \begin{exercise}
-	Laat zien dat voor een EVRB waarvoor $x_0=0$ de volgende formule geldt:
+	Laat zien dat voor een EVRB volgende formule geldt: 
 	\begin{eqnarray*}
-		v^2=v_0^2+2ax
+		v^2=v_0^2+2a\Delta x
 		%v^2=v_0^2+2a(x-x_0)
 	\end{eqnarray*}
 
@@ -129,7 +127,10 @@
 \end{exercise}
 
 \begin{exercise}
-	Beargumenteer het gebruik van het model van een eenparig versnelde rechtlijnige beweging (EVRB) voor de vrije beweging van een wagentje op een helling. Denk daarbij aan een proefneming die we in de klas deden. De notie kracht moet je hier even buiten beschouwing laten.
+	Beargumenteer het gebruik van het model van een eenparig versnelde rechtlijnige beweging (EVRB) voor de vrije beweging van een wagentje op een helling. 
+	Denk daarbij aan een proefneming die we in de klas deden. 
+	De notie kracht moet je hier even buiten beschouwing laten.
+	Beschrijf hierbij de beweging van het wagentje en de bijbehorende grafieken van \(x(t), v(v) \text{ en } a(t)\)
 	\begin{oplossing}
 		Het model beschrijft de meetgegevens accuraat.
 
@@ -145,7 +146,7 @@
 % Denkvragen over de valbeweging
 
 \begin{exercise}
-	Kan de bewegingsrichting van een voorwerp omkeren terwijl de versnelling gelijk blijft? Zo ja, geef dan een voorbeeld. Zo nee, leg uit waarom dat niet kan.
+	Kan de bewegingszin van een voorwerp omkeren terwijl de versnelling gelijk blijft? Zo ja, geef dan een voorbeeld. Zo nee, leg uit waarom dat niet kan.
 	\begin{oplossing}
 		Ja, dat kan. Als je een bal opwerpt zal op het hoogste punt de bewegingszin omdraaien terwijl de versnelling gelijk blijft. We kunnen immers een verticale worp modelleren als een EVRB. Kiezen we de referentieas om de beweging te beschrijven omhoog, dan is de snelheid van de bal positief bij het naar boven bewegen en negatief wanneer hij naar beneden komt, terwijl de verandering van de snelheid in de tijd (de versnelling) systematisch gelijk is aan de negatieve valversnelling.
 	\end{oplossing}
@@ -185,7 +186,9 @@
 \end{exercise}
 
 \begin{exercise}
-	Vanop een grote hoogte laat men achtereenvolgens twee stenen vallen met een tussentijd van 2 seconden. Op welke wijze verandert de afstand tussen beide stenen in de tijdsduur dat beide vallen?
+	Vanop een grote hoogte laat men achtereenvolgens twee stenen vallen met een tussentijd van 2 seconden. 
+	Op welke wijze verandert de afstand tussen beide stenen in de tijdsduur dat beide vallen?
+	Geef een tijdsafhenkelijk voorschrift voor die afstand. 
 	\begin{hint}
 		Begin met een grafische voorstelling.
 	\end{hint}
