--- a/kinematica/exercises/1dim_oef_vraagstukken.tex
+++ b/kinematica/exercises/1dim_oef_vraagstukken.tex
@@ -8,34 +8,36 @@
     \xmsource\xmuitleg
 
 \begin{exercise}
-    Een automobilist rijdt gedurende \SI{1,5}{uur} tegen \SI{80}{km/h} en daarna gedurende dezelfde tijdsduur tegen
-    \SI{70}{km/h}.
+    Een automobilist rijdt op een rechte baan gedurende \SI{1,5}{\hour} aan \SI{80}{\kilo\meter\per\hour} en daarna gedurende dezelfde tijdsduur aan
+    \SI{70}{\kilo\meter\per\hour} in dezelfde zin.
     \begin{enumerate}
         \item Wat is zijn gemiddelde snelheid?
         \item Met welke snelheid had hij moeten rijden om met een constante snelheid hetzelfde traject in dezelfde tijd af te leggen?
     \end{enumerate}
-    \begin{exercise}
-        Een fietser legt een bepaalde afstand af over een zekere tijd. Gedurende de eerste helft van de tijd houdt hij constant een snelheid $v_1$ aan, gedurende de tweede helft een snelheid $v_2$. Wat is zijn gemiddelde snelheid over het totale tijdsinterval?
-        \begin{oplossing}
-            $\overline{v}=\frac{v_1+v_2}{2}$
-        \end{oplossing}
-\end{exercise}
 \end{exercise}
 
 \begin{exercise}
-    Een automobilist legt \SI{120}{km} af. De eerste helft van de weg legt hij af tegen \SI{90}{km/h}, de tweede helft tegen \SI{120}{km/h}. Wat is zijn gemiddelde snelheid?
-    \begin{exercise}
-        Een fietser legt een bepaalde afstand af over een zekere tijd. Gedurende de eerste helft van de af te leggen afstand houdt hij constant een snelheid $v_1$ aan, gedurende de tweede helft een snelheid $v_2$. Wat is zijn gemiddelde snelheid over het totale tijdsinterval? 
+    Een fietser legt een bepaalde afstand af over een zekere tijd. Gedurende de eerste helft van de tijd houdt hij constant een snelheid $v_1$ aan, gedurende de tweede helft een snelheid $v_2$. Wat is zijn gemiddelde snelheid over het totale tijdsinterval?
     \begin{oplossing}
-        $\overline{v}=\frac{2v_1v_2}{v_1+v_2}$
+        $\overline{v}=\frac{v_1+v_2}{2}$
     \end{oplossing}
 \end{exercise}
+
+\begin{exercise}
+    Een automobilist legt \SI{120}{km} af. De eerste helft van de weg legt hij af aan \SI{90}{\kilo\meter\per\hour}, de tweede helft aan \SI{120}{\kilo\meter\per\hour}. Wat is zijn gemiddelde snelheid?
+\end{exercise}
+
+\begin{exercise}
+    Een fietser legt een bepaalde afstand af over een zekere tijd. Gedurende de eerste helft van de af te leggen afstand houdt hij constant een snelheid $v_1$ aan, gedurende de tweede helft een snelheid $v_2$. Wat is zijn gemiddelde snelheid over het totale tijdsinterval? 
+\begin{oplossing}
+    $\overline{v}=\frac{2v_1v_2}{v_1+v_2}$
+\end{oplossing}
 \end{exercise}
 
 \begin{exercise}
     Als je met de fiets heen en terug naar school rijdt en in het heengaan tegenwind en in het terugkeren rugwind hebt, compenseert dat dan mekaar precies?
 
-    Stel om dit op te lossen dat de weg rechtlijnig is. Bereken je gemiddelde snelheid over het traject heen en terug en vergelijk die met de snelheid die je zonder wind zou halen. Neem aan dat je normaal \SI{10}{km/h} zou fietsen, maar door de wind win of verlies je \SI{2}{km/h}.
+    Stel om dit op te lossen dat de weg rechtlijnig is. Bereken je gemiddelde snelheid over het traject heen en terug en vergelijk die met de snelheid die je zonder wind zou halen. Neem aan dat je normaal \SI{20}{\kilo\meter\per\hour} zou fietsen, maar door de wind win of verlies je \SI{2}{\kilo\meter\per\hour}.
     \begin{multipleChoice}
         \choice[correct]{Nee, je hebt netto een nadeel vanwege de tegenwind.}
         \choice{Nee, je hebt netto een voordeel vanwege de rugwind.}
@@ -44,14 +46,14 @@
 \end{exercise}
 
 \begin{exercise}
-    Een bowlingbal die met een constante snelheid voort rolt, raakt de kegels aan het einde van een kegelbaan van \SI{16,5}{m} lengte. De werper hoorde het geluid waarmee de bal op de kegels botst \SI{2,5}{s} nadat hij de bal losliet. Welke snelheid had de bal? De snelheid van het geluid is \SI{343}{m/s}. 
+    Een bowlingbal die met een constante snelheid voortrolt, raakt de kegels aan het einde van een kegelbaan van \SI{16,5}{m} lengte. De werper hoorde het geluid waarmee de bal op de kegels botst \SI{2,5}{s} nadat hij de bal losliet. Welke snelheid had de bal? De snelheid van het geluid is \SI{343}{m/s}. 
     \begin{oplossing}
         $v_1=\frac{x_1}{t_2-\frac{x_1}{v_2}}=\SI{6,73}{m/s}$
     \end{oplossing}
 \end{exercise}
 
 \begin{exercise}
-    Een vliegtuig moet minstens een snelheid van \SI{108}{km/h} hebben om te kunnen opstijgen. Indien de schroeven aan het toestel een versnelling van \SI{1,50}{m/s^2} geven, hoe lang moet de startbaan dan minstens zijn? 
+    Een vliegtuig moet minstens een snelheid van \SI{108}{\kilo\meter\per\hour} hebben om te kunnen opstijgen. Indien de propellers aan het toestel een versnelling van \SI{1,50}{m/s^2} geven, hoe lang moet de startbaan dan minstens zijn? 
     \begin{oplossing}
     % \item[gegeven]$v=30,0\rm\,m/s$\newline$a=1,50\rm\,m/s^2$
     % \item[gevraagd]$x$
@@ -71,7 +73,7 @@
 \end{exercise}
 
 \begin{exercise}
-    Een trein rijdt tegen een snelheid van \SI{72}{km/h} en remt met een versnelling waarvan de grootte \SI{1,0}{m/s^2} bedraagt. Na hoeveel tijd komt de trein tot stilstand en welke afstand wordt er tijdens dit afremmen afgelegd?
+    Een trein rijdt aan een snelheid van \SI{72}{\kilo\meter\per\hour} en remt met een versnelling waarvan de grootte \SI{1,0}{m/s^2} bedraagt. Na hoeveel tijd komt de trein tot stilstand en welke afstand wordt er tijdens dit afremmen afgelegd?
 
     \begin{oplossing}
         % \item[gegeven]$v_0=\SI{20}{m/s}\newline $a=\SI{-1,0}{m/s^2}
@@ -110,14 +112,14 @@
 \end{exercise}
 
 \begin{exercise}
-    Een bootje vaart met een snelheid van \SI{36,0}{km/h} een eerste tijdopnemer voorbij en drijft daarna eenparig zijn snelheid op. Na \SI{20,0}{s} komt het voorbij een tweede tijdopnemer met een snelheid van \SI{90,0}{km/h}. Bereken de versnelling van het bootje en de afstand tussen beide tijdopnemers.
+    Een bootje vaart met een snelheid van \SI{36,0}{\kilo\meter\per\hour} een eerste tijdopnemer voorbij en drijft daarna eenparig zijn snelheid op. Na \SI{20,0}{s} komt het voorbij een tweede tijdopnemer met een snelheid van \SI{90,0}{\kilo\meter\per\hour}. Bereken de versnelling van het bootje en de afstand tussen beide tijdopnemers.
     \begin{oplossing}
         $a=\frac{v-v_0}{t-t_0}=0,750\rm\,m/s^2$, $x-x_0=\left(\frac{v_0+v}{2}\right)(t-t_0)=\SI{350}{m}$
     \end{oplossing}
 \end{exercise}
 
 \begin{exercise}
-    Een auto vertrekt vanuit rust en bereikt na \SI{3,0}{km} een snelheid van \SI{450}{km/h} We onderstellen de versnelling constant en de baan recht. Bereken de versnelling en de tijd, nodig om die \SI{3,0}{km} af te leggen.
+    Een auto vertrekt vanuit rust en bereikt na \SI{3,0}{km} een snelheid van \SI{450}{\kilo\meter\per\hour} We onderstellen de versnelling constant en de baan recht. Bereken de versnelling en de tijd, nodig om die \SI{3,0}{km} af te leggen.
 \begin{oplossing}
     % \item[gegeven]$x=3000\rm\,m$\newline $v=125\rm\,m/s$
     % \item[gevraagd]$a$, $t$
@@ -140,7 +142,7 @@
 \end{exercise}
 
 \begin{exercise}
-    Een auto begint te remmen als hij zich \SI{35}{m} van een hindernis bevindt. Zijn snelheid op dat moment is \SI{54}{km/h}. Na \SI{4,0}{s} botst hij tegen de hindernis. Bereken de snelheid waarmee hij de hindernis raakt en zijn constante versnelling gedurende de remweg.
+    Een auto begint te remmen als hij zich \SI{35}{m} van een stilstaande hindernis bevindt. Zijn snelheid op dat moment is \SI{54}{\kilo\meter\per\hour}. Na \SI{4,0}{s} botst hij tegen de hindernis. Bereken de snelheid waarmee hij de hindernis raakt en zijn constante versnelling gedurende de remweg.
     \begin{oplossing}
     Uit de plaatsfunctie $x=v_0t+\frac{1}{2}at^2$ kunnen we de versnelling halen:
     \begin{equation*}
@@ -166,7 +168,9 @@
 \end{exercise}
 
 \begin{exercise}
-        Een trein verlaat het station a en rijdt naar het station b, op \SI{15}{km} van a gelegen. De eerste \SI{1000}{m} worden afgelegd met een EVRB en de verkregen snelheid is $72,0~\rm km/h$. Die snelheid blijft constant tot op $250~\rm m$ van b. Hier begint de trein te vertragen. Wanneer komt hij in station b toe? Maak de $v(t)$-grafiek.
+        Een trein vertrekt om 12u00 in het station a en rijdt naar het station b, op \SI{15}{\kilo\meter} van a gelegen. 
+        De eerste \SI{1000}{m} worden afgelegd met een EVRB en de verkregen snelheid is \SI{72}{\kilo\meter\per\hour}. 
+        Die snelheid blijft constant tot op \SI{250}{\meter} van b. Hier begint de trein te vertragen. Om hoe laat komt de trein in station b toe? Maak de $v(t)$-grafiek.
 \end{exercise}
 
 \begin{exercise}
@@ -180,17 +184,43 @@
 \end{exercise}
 
 \begin{exercise}
-Een deeltje beweegt in de zin van de $x$-as. De nevenstaande grafiek geeft aan hoe de grootte van de snelheid verandert als functie van de tijd.
-\begin{enumerate}
-\item De afstand afgelegd na \SI{15}{s} bedraagt:
+Een deeltje beweegt in de zin van de $x$-as. De onderstaande grafiek geeft aan hoe de grootte van de snelheid verandert als functie van de tijd.
+\begin{image}
+    \begin{tikzpicture}[xscale=0.5]
+        \draw[->] (0,0) -- (32,0) node[right, font=\Large] {$t$ (s)};
+        \draw[->] (0,0) -- (0,13) node[above, font=\Large] {$v$ (m/s)};
+        
+        \draw[dashed] (0,12) -- (5,12);
+        \draw[dashed] (5,0) -- (5,12);
+        \draw[dashed] (15,0) -- (15,12);
+        
+        \foreach \x in {0,5,15,30}
+            \draw (\x,0) -- (\x,-0.2) node[below] {\x};
+        \foreach \y in {4,8,12}
+            \draw (0,\y) -- (-0.2,\y) node[left] {\y};
+        
+        \draw[thick] (0,0) -- (5,12) -- (15,12) -- (30,0);
+    \end{tikzpicture}	
+    \end{image}
+    \captionof{figure}{snelheidsfunctie}
+
+
+% preTikz... 
+% \begin{image}
+%     \includegraphics[width=\textwidth]{snelheidsverloop_2_o}
+% \end{image}
+
+\begin{question}
+De afstand afgelegd na \SI{15}{s} bedraagt:
 \wordChoice{
     \choice{\SI{30}{m}}
     \choice{\SI{120}{m}}
     \choice{\SI{150}{m}}
     \choice{\SI{240}{m}}
 }
-
-\item Na \SI{30}{s} heeft het deeltje een welbepaalde afstand afgelegd. Hoe groot zou de constante snelheid van het deeltje moeten zijn om in \SI{30}{s} dezelfde afstand af te leggen?
+\end{question}
+\begin{question}
+Na \SI{30}{s} heeft het deeltje een welbepaalde afstand afgelegd. Hoe groot zou de constante snelheid van het deeltje moeten zijn om in \SI{30}{s} dezelfde afstand af te leggen?
 
 \wordChoice{
     \choice{\SI{0,0}{m/s}}
@@ -198,22 +228,71 @@ Een deeltje beweegt in de zin van de $x$-as. De nevenstaande grafiek geeft aan h
     \choice{\SI{8,0}{m/s}}
     \choice{\SI{12}{m/s}}
 }
-\end{enumerate}
+\end{question}
+\begin{question}
+Welke figuur geeft kwalitatief het verloop van de versnellingscompent van het deeltje weer?
+
 \begin{image}
-    \includegraphics[width=\textwidth]{snelheidsverloop_2_o}
-\end{image}
-\begin{enumerate}
-\setcounter{enumii}{2}
-\item Het verloop van de versnellingscomponent van het deeltje wordt kwalitatief voorgesteld op figuur:
-\begin{image}
-    \includegraphics[width=0.93\textwidth]{snelheidsverloop_2}
-\end{image}
-\end{enumerate}
+	\begin{tikzpicture}		
+
+	\begin{scope}[shift={(0,0)}]
+	  \draw[->] (0,0) -- (6,0) node[right] {$t\,(s)$};
+	  \draw[->] (0,0) -- (0,4) node[above] {$a_x$};
+  
+	  \draw[thick] (0,0) -- (0,2) -- (1,2) -- (1,0) -- (3,0) -- (3,-1) -- (6,-1) -- (6,0);
+  
+	  \node at (1,-0.3) {5};
+	  \node[above] at (3,0) {15};
+	  \node[above] at (6,0) {30};
+	\end{scope}
+  
+	\begin{scope}[shift={(8,0)}]
+	  \draw[->] (0,0) -- (6,0) node[right] {$t\,(s)$};
+	  \draw[->] (0,0) -- (0,4) node[above] {$a_x$};
+  
+	  \draw[thick] (0,0) -- (0,2) -- (1,2) -- (1,0) -- (3,0) -- (3,1) -- (6,1) -- (6,0);
+  
+	  \node at (1,-0.3) {5};
+	  \node at (3,-0.3) {15};
+	  \node at (6,-0.3) {30};
+	\end{scope}
+  
+	\begin{scope}[shift={(0,-6)}]
+	  \draw[->] (0,0) -- (6,0) node[right] {$t\,(s)$};
+	  \draw[->] (0,0) -- (0,4) node[above] {$a_x$};
+  
+	  \draw[thick] (0,0) -- (1,3) -- (1,0) -- (3,0) -- (3,-1) -- (6,0);
+  
+	  \node at (1,-0.3) {5};
+	  \node[above] at (3,0) {15};
+	  \node at (6,-0.3) {30};
+	\end{scope}
+  
+	\begin{scope}[shift={(8,-6)}]
+	  \draw[->] (0,0) -- (6,0) node[right] {$t\,(s)$};
+	  \draw[->] (0,0) -- (0,4) node[above] {$a_x$};
+  
+	  \draw[thick] (0,0) -- (1,2) -- (3,2) -- (6,0);
+  
+	  \node at (1,-0.3) {5};
+	  \node at (3,-0.3) {15};
+	  \node at (6,-0.3) {30};
+	\end{scope}
+	\end{tikzpicture}
+  \end{image}
+  
+% preTikz... 
+% \begin{image}
+%     \includegraphics[width=0.93\textwidth]{snelheidsverloop_2}
+% \end{image}
+\end{question}
 \end{exercise}
+
+
 
 % Bron Serway 4yh edition oefening 77 chapter 2
 \begin{exercise}
-    ($\ast\ast\ast$) Maggie en Jennifer lopen de \SI{100}{m}. Beiden doen ze er exact 10,2 se\-conden over. Met een eenparige versnelling bereikt Maggie na \SI{2}{s} haar maximale snelheid, Jennifer doet dat na \SI{3}{s}. Hun maximale snelheden houden ze aan voor de rest van de wedstrijd.
+    ($\ast\ast\ast$) Maggie en Jennifer lopen de \SI{100}{m}. Beiden doen ze er exact \SI{10.2}{\second} over. Met een eenparige versnelling bereikt Maggie na \SI{2}{\second} haar maximale snelheid, Jennifer doet dat na \SI{3}{s}. Hun maximale snelheden houden ze aan voor de rest van de wedstrijd.
     \begin{enumerate}
         \item Wat zijn hun maximale snelheden?
         \item Wat is de versnelling van iedere sprinter?
@@ -231,22 +310,17 @@ Een deeltje beweegt in de zin van de $x$-as. De nevenstaande grafiek geeft aan h
     \end{oplossing}
 \end{exercise}
 
-\begin{exercise}
-    Welke afstand wordt er door een bungeejumper na een vrije val van \SI{2,5}{s} afgelegd?
-    \begin{oplossing}
-        $x=\frac{1}{2}gt^2=31\rm\,m$
-    \end{oplossing}
-\end{exercise}
+
 
 \begin{exercise}
-    Een auto die \SI{90}{km/h} rijdt, ligt \SI{100}{m} achter op een vrachtwagen die \SI{75}{km/h} rijdt. Hoeveel tijd kost het de auto om de vrachtwagen in te halen? 
+    Een auto die \SI{90}{\kilo\meter\per\hour} rijdt, ligt \SI{100}{m} achter op een vrachtwagen die \SI{75}{\kilo\meter\per\hour} rijdt. Hoeveel tijd kost het de auto om de vrachtwagen in te halen? 
     \begin{oplossing}
         $t=\frac{x_0}{v_a-v_v}=24\rm\,s$
     \end{oplossing}
 \end{exercise}
 
 \begin{exercise}
-    De snelheid van een trein verandert eenparig in 2 minuten van \SI{20}{km/h} tot \SI{30}{km/h}. De trein rijdt gedurende die tijd over een rechte spoorlijn.
+    De snelheid van een trein verandert eenparig in 2 minuten van \SI{20}{\kilo\meter\per\hour} tot \SI{30}{\kilo\meter\per\hour}. De trein rijdt gedurende die tijd over een rechte spoorlijn.
     \begin{enumerate}
         \item Bepaal de versnelling.
         \item Bepaal de afstand die de trein heeft afgelegd gedurende deze 2 minuten.
@@ -262,18 +336,21 @@ Een deeltje beweegt in de zin van de $x$-as. De nevenstaande grafiek geeft aan h
 \end{exercise}
 
 \begin{exercise}
-    Bij het katapulteren van vliegtuigen wordt een startbaan van \SI{25,0}{m} gebruikt, die door het vliegtuig eenparig versneld in \SI{1,00}{s} wordt doorlopen. Zoek zijn versnelling en de snelheid waarmee het de baan verlaat.
+    Op een vliegdekschip worden vliegtuigen gekatapulteerd op een startbaan van \SI{25}{\meter}. 
+    Een opstijgend vliegtuig doorloopt dat traject vanuit rust op \SI{1}{\second} tijd en dat op eenparig versnelde manier.
+
+    Zoek zijn versnelling en de snelheid waarmee het de baan verlaat.
 \end{exercise}
 
 \begin{exercise}
-    Een auto trekt op tot \SI{100}{km/h} in \SI{6,0}{s}. Als hij dat doet op een rechte baan met constante versnelling, welke afstand is er dan hiervoor nodig?
+    Een auto trekt vanuit rust op tot \SI{100}{\kilo\meter\per\hour} in \SI{6,0}{s}. Als hij dat doet op een rechte baan met constante versnelling, welke afstand is er dan hiervoor nodig?
     \begin{oplossing}
         $a=\frac{v}{t}=4,63\rm\,m/s^2$, $x=\frac{vt}{2}=83,3\rm\,m$
     \end{oplossing}
 \end{exercise}
 
 \begin{exercise}
-    Een auto vertrekt vanuit rust en bereikt na \SI{3,0}{km} een snelheid van \SI{450}{km/h} We onderstellen de versnelling constant en de baan recht. Bereken de versnelling en de tijd, nodig om die \SI{3,0}{km} af te leggen.
+    Een auto vertrekt vanuit rust en bereikt na \SI{3,0}{km} een snelheid van \SI{450}{\kilo\meter\per\hour} We onderstellen de versnelling constant en de baan recht. Bereken de versnelling en de tijd, nodig om die \SI{3,0}{km} af te leggen.
     \begin{oplossing}
     % \footnote{$t=\frac{2x}{v}=48\rm\,s$, $a=\frac{v^2}{2x}=2,6\rm\,m/s^2$}
     % \item[gegeven]$x=3000\rm\,m$\newline $v=125\rm\,m/s$
@@ -301,7 +378,8 @@ Een deeltje beweegt in de zin van de $x$-as. De nevenstaande grafiek geeft aan h
 \end{exercise}
 
 \begin{exercise}
-    Een trein vertrekt uit een station en rijdt met een eenparig versnelde beweging waarvan de versnelling \SI{0,50}{m/s^2} bedraagt. Hoe groot is de afstand die de trein heeft afgelegd als zijn snelheid \SI{72,0}{km/h} bedraagt?
+    Een trein vertrekt uit een station en rijdt op een recht spoor met een eenparig versnelde beweging waarvan de versnelling \SI{0,50}{m/s^2} bedraagt. 
+    Hoe groot is de afstand die de trein heeft afgelegd als zijn snelheid \SI{72,0}{\kilo\meter\per\hour} bedraagt?
 \end{exercise}
 
 \begin{exercise}
@@ -335,7 +413,7 @@ Een deeltje beweegt in de zin van de $x$-as. De nevenstaande grafiek geeft aan h
 \end{exercise}
 
 \begin{exercise}
-    Een vliegtuig start vanuit rust en versnelt met een constante versnelling langs de grond alvorens op te stijgen. Het legt \SI{600}{m} af in \SI{12}{s}. Bepaal de versnelling, de snelheid na \SI{12}{s} en de afstand afgelegd gedurende de twaalfde seconde.
+    Aan het begin van een rechte landingsbaan, start een vliegtuig vanuit rust en versnelt met een constante versnelling langs de grond alvorens op te stijgen. Het legt \SI{600}{m} af in \SI{12}{s}. Bepaal de versnelling, de snelheid na \SI{12}{s} en de afstand afgelegd gedurende de twaalfde seconde.
 
     \begin{oplossing}
         $a=\frac{2x}{t^2}=\SI{8,33}{m/s^2}$,
