--- a/kinematica/exercises/1dim_oef_vraagstukken_valbeweging.tex
+++ b/kinematica/exercises/1dim_oef_vraagstukken_valbeweging.tex
@@ -15,19 +15,10 @@
 \end{exercise}
 
 \begin{exercise}
-    Uit een punt op \SI{28,0}{m} boven de grond wordt een bal verticaal omhoog geworpen met een snelheid van \SI{12}{m/s}. Bepaal
-    \begin{enumerate}
-        \item de door het lichaam bereikte hoogte boven de grond;
-        \item de tijd nodig om de grond te bereiken;
-        \item de snelheid bij het bereiken van de grond.
-    \end{enumerate}
-    \begin{oplossing}
-        $v=0\Rightarrow x=x_0+\frac{v_0^2}{2g}=\SI{35,34}{m}$
-
-        $x=0\Rightarrow t=\frac{v_0+\sqrt{v_0^2+2gx_0}}{g}=\SI{3,91}{s}$
-
-        $v=-\sqrt{v_0^2+2gx_0}=\SI{-26,33}{m/s}$
-    \end{oplossing}
+    Uit een punt op \SI{28,0}{m} boven de grond wordt een bal verticaal omhoog geworpen met een snelheid van \SI{12}{m/s}. 
+    \begin{question} Bepaal de door de bal bereikte hoogte boven de grond; \begin{oplossing} $v=0\Rightarrow x=x_0+\frac{v_0^2}{2g}=\SI{35,34}{m}$ \end{oplossing} \end{question}
+    \begin{question} Bepaal de tijd nodig om de grond te bereiken;              \begin{oplossing} $x=0\Rightarrow t=\frac{v_0+\sqrt{v_0^2+2gx_0}}{g}=\SI{3,91}{s}$\end{oplossing} \end{question}
+    \begin{question} Bepaal de snelheid bij het bereiken van de grond.          \begin{oplossing} $v=-\sqrt{v_0^2+2gx_0}=\SI{-26,33}{m/s}$ \end{oplossing} \end{question}
 \end{exercise}
 
 \begin{exercise}
@@ -88,7 +79,7 @@
 \end{exercise}
 
 \begin{exercise}
-    ($\ast\ast\ast$) Wanneer de pelikaan naar vis duikt, trekt hij zijn vleugels in om als een steen loodrecht naar beneden te vallen.
+    ($\ast\ast\ast$) Wanneer de pelikaan naar vis duikt, trekt hij zijn vleugels in om als een steen verticaal naar beneden te vallen.
 
     Stel een pelikaan duikt vanaf \SI{25}{m} hoogte en verandert onderweg dus niet meer van koers. Als het een vis \SI{0,15}{s} kost om te vluchten, wat is dan de hoogte waarop de vis de pelikaan minstens moet opmerken, wil de vis nog kans maken te ontsnappen?
 
@@ -189,18 +180,18 @@
 % Bron Fysica Vandaag 2 p. 92
 
 \begin{exercise}
-    ($\ast\ast\ast$) Een ziek man zit voor een raam dat \SI{1,20}{m} hoog is. Een steen wordt vanop de grond opgeworpen en passeert het raam een keer opwaarts en een keer neerwaarts. De man ziet de steen in totaal voor \'e\'en seconde.% (Een halve bij het opgaan en een halve bij het terug naar beneden gaan.)
-    \begin{enumerate}
-        \item Bepaal de snelheid waarmee de steen de onderkant van het raam bereikt.% (die is op het teken na hetzelfde in zowel de opwaartse als de neerwaartse beweging).
-        \item Toon aan dat het met deze gegevens niet mogelijk is te berekenen hoe hoog het raam boven de grond is gelegen.
-    \end{enumerate}
-    \begin{oplossing}
-        (a) $\Delta x= v_1\Delta t-\frac{1}{2}g\Delta t^2$ zodat $v_1=\bar{v}+g\frac{\Delta t}{2}=\SI{4,85}{m/s}$ ($\Delta t = \SI{0,5}{s}$)
-        
-        (b) Naast de hoogte van het raam boven de grond, zijn ook de benodigde tijd en de beginsnelheid onbekende grootheden. Met maar twee vergelijkingen die een EVRB beschrijven ($x=x_0+v_0t+\frac{1}{2}at^2$ en $v=v_0+at$), zijn deze onbekenden niet vast te leggen. 
-        
-        In een meer fysische uitleg kan je je realiseren dat eenzelfde snelheid aan de onderkant van het raam voor een grotere hoogte boven de grond te realiseren is met een grotere snelheid waarmee de steen opgeworpen wordt.
-    \end{oplossing}
+    ($\ast\ast\ast$) Een zieke man zit voor een raam dat \SI{1,20}{m} hoog is. Een steen wordt vanop de grond opgeworpen en passeert het raam een keer opwaarts en een keer neerwaarts. De man ziet de steen in totaal voor exact één seconde.% (Een halve bij het opgaan en een halve bij het terug naar beneden gaan.)
+
+    \begin{question} Bepaal de snelheid waarmee de steen de onderkant van het raam bereikt.  
+        \begin{oplossing} $\Delta x= v_1\Delta t-\frac{1}{2}g\Delta t^2$ zodat $v_1=\bar{v}+g\frac{\Delta t}{2}=\SI{4,85}{m/s}$ ($\Delta t = \SI{0,5}{s}$) 
+        \end{oplossing} 
+    \end{question} % (die is op het teken na hetzelfde in zowel de opwaartse als de neerwaartse beweging).
+    
+    \begin{question} Toon aan dat het met deze gegevens niet mogelijk is te berekenen hoe hoog het raam boven de grond is gelegen. 
+        \begin{oplossing} Naast de hoogte van het raam boven de grond, zijn ook de benodigde tijd en de beginsnelheid onbekende grootheden. Met maar twee vergelijkingen die een EVRB beschrijven ($x=x_0+v_0t+\frac{1}{2}at^2$ en $v=v_0+at$), zijn deze onbekenden niet vast te leggen. 
+        In een meer fysische uitleg kan je je realiseren dat eenzelfde snelheid aan de onderkant van het raam voor een grotere hoogte boven de grond te realiseren is met een grotere snelheid waarmee de steen opgeworpen wordt. 
+        \end{oplossing} 
+    \end{question} 
 \end{exercise}
 % Bron Herman Van Bouwel
 
